--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "_from": "masterrecord",
-  "_id": "masterrecord@0.0.6",
+  "_from": "masterrecord@^0.0.7cd",
+  "_id": "masterrecord@0.0.7",
   "_inBundle": false,
   "_integrity": "sha512-lvj3RDJYn7p3UqXXPN4FZpsmtfK944enXnnJGwXevPKdfwjmXWSjD82RIALOnNaegRdLID6l3GN44pCHotg8Tg==",
   "_location": "/masterrecord",
   "_phantomChildren": {},
   "_requested": {
-    "type": "tag",
+    "type": "range",
     "registry": true,
-    "raw": "masterrecord",
-    "name": "masterrecord",
-    "escapedName": "masterrecord",
-    "rawSpec": "",
+    "raw": "masterrecord@^0.0.7cd",
+    "name": "masterRecord",
+    "escapedName": "masterRecord",
+    "rawSpec": "^0.0.7cd",
     "saveSpec": null,
-    "fetchSpec": "latest"
+    "fetchSpec": "^0.0.7cd"
   },
   "_requiredBy": [
-    "#USER",
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/masterrecord/-/masterrecord-0.0.6.tgz",
+  "_resolved": "https://registry.npmjs.org/masterrecord/-/masterrecord-0.0.7.tgz",
   "_shasum": "535c41572436cdbcd56d0c906e607975f8d265ea",
-  "_spec": "masterrecord",
-  "_where": "C:\\Users\\rbatista\\Desktop\\sd",
+  "_spec": "masterrecord@^0.0.7cd",
+  "_where": "C:\\Users\\rbatista\\Desktop\\jj",
   "author": {
     "name": "Alexander Batista",
     "email": "spidergt1@aol.com"
@@ -32,7 +31,7 @@
   },
   "bundleDependencies": [],
   "dependencies": {
-    "better-sqlite3": "^5.2.0"
+    "better-sqlite3": "^5.4.0"
   },
   "deprecated": false,
   "description": "An Object-relational mapping foe the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
@@ -47,5 +46,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.6"
+  "version": "0.0.7"
 }
