--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "better-sqlite3": "^5.4.3",
     "commander": "^4.1.0"
   },
+  "bin": {
+    "masterrecord": "./migrations/cli.js"
+  },
+  "preferGlobal": true,
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
   "homepage": "https://github.com/Tailor/MasterRecord#readme",
   "license": "ISC",
