--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "glob" : "^10.3.4",
     "deep-object-diff" : "^1.1.9"
   },
-  "version": "0.0.35",
+  "version": "0.0.36",
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
   "homepage": "https://github.com/Tailor/MasterRecord#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tailor/Masterrecord.git"
   },
-  "main": "MasterRecord.js",
+  "main": "Masterrecord.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
