--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "glob" : "^10.3.10",
     "deep-object-diff" : "^1.1.9",
     "pg" : "^8.13.3",
-    "mysql" : "^2.18.1"
+    "sync-mysql2" : "^1.0.4",
+    "app-root-path": "^3.1.0"
   },
-  "version": "0.0.47",
+  "version": "0.0.48",
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
   "homepage": "https://github.com/Tailor/MasterRecord#readme",
   "repository": {
