--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "sync-mysql2" : "^1.0.6",
     "app-root-path": "^3.1.0"
   },
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
   "homepage": "https://github.com/Tailor/MasterRecord#readme",
   "repository": {
@@ -22,6 +22,6 @@
   "author": "Alexander Rich",
   "license": "ISC",
   "bin": {
-    "masterrecord": "./migrations/cli.js"
+    "masterrecord": "./Migrations/cli.js"
   }
 }
