--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "deep-object-diff" : "^1.1.9",
     "pg" : "^8.16.3",
     "sync-mysql2" : "^1.0.6",
-    "app-root-path": "^3.1.0"
+    "app-root-path": "^3.1.0",
+    "better-sqlite3": "^12.4.1"
   },
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
   "homepage": "https://github.com/Tailor/MasterRecord#readme",
   "repository": {
