--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "masterrecord",
   "dependencies": {
-    "commander": "^14.0.1",
-    "glob" : "^11.0.3",
-    "deep-object-diff" : "^1.1.9",
-    "pg" : "^8.16.3",
-    "sync-mysql2" : "^1.0.6",
+    "-": "^0.0.1",
     "app-root-path": "^3.1.0",
-    "better-sqlite3": "^12.4.1"
+    "better-sqlite3": "^12.4.1",
+    "commander": "^14.0.1",
+    "deep-object-diff": "^1.1.9",
+    "g": "^2.0.1",
+    "glob": "^11.0.3",
+    "masterrecord": "^0.2.13",
+    "pg": "^8.16.3",
+    "sync-mysql2": "^1.0.6"
   },
   "version": "0.2.14",
   "description": "An Object-relational mapping for the Master framework. Master Record connects classes to relational database tables to establish a database with almost zero-configuration ",
